--- a/HomePage.html
+++ b/HomePage.html
@@ -9,11 +9,11 @@
 		<img id="Logo" src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/LogoWhite.png" alt="LogoWhite" > 
 		<p> With each section I share a piece of my world </p>
 		<hr / style="50px;">
-				<ul class="nav">
-					<li><a href="#stills"> Stills </a></li>
-    				<li><a href="#chapters"> Chapters </a></li>
-    				<li><a href="#pieces"> Pieces </a></li>
-    				<li><a href="#reachme"> Reach me </a></li>
+				<ul class="nav" style="margin-top: 30px;margin-bottom: 30px; margin-right: auto; margin-left: auto;">
+					<li><a href="#stills" style="text-decoration: none;"> Stills </a></li>
+    				<li><a href="#chapters" style="text-decoration: none;"> Chapters </a></li>
+    				<li><a href="#pieces" style="text-decoration: none;"> Pieces </a></li>
+    				<li><a href="#reachme" style="text-decoration: none;"> Reach me </a></li>
   					</ul>
   				</ul>
   		<video autoplay loop muted poster="stimelapse.jpg" id="background">
