--- a/Stills.html
+++ b/Stills.html
@@ -7,73 +7,62 @@
 
 <body>
   <ul class="nav">
-          <li><a href="#stills"> Stills </a></li>
-            <li><a href="#chapters"> Chapters </a></li>
-            <li><a href="#pieces"> Pieces </a></li>
-            <li><a href="#reachme"> Reach me </a></li>
+            <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/HomePage.html" style="text-decoration: none;"> Home </a></li>
+            <li><a href="#stills" style="text-decoration: none;"> Stills </a></li>
+            <li><a href="#chapters"style="text-decoration: none;"> Chapters </a></li>
+            <li><a href="#pieces" style="text-decoration: none;"> Pieces </a></li>
+            <li><a href="#reachme" style="text-decoration: none;"> Reach me </a></li>
             </ul>
           </ul>
+
+    <video autoplay loop muted poster="timelapse2.jpg" id="background">
+    <source src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/timelapse2.mp4" type="video/mp4">
+    </video>
+
   <h1> Stills </h1>
   	<p> A Picture can speak louder than words... </p>
     		<div id="Places">
     			<h2> Places </h2>
-    			<script type="text/javascript">
+      			<script type="text/javascript">
+            var image1 = new Image()
+            image1.src = "file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/Brooklyn.jpg"
+            var image2 = new Image()
+            image2.src = "file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/Pylipets.jpg"
+            var image3 = new Image()
+            image3.src = "file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/Manhattan.jpg"
+            </script>
 
-var image1 = new Image()
-image1.src = "file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/Brooklyn.jpg"
-var image2 = new Image()
-image2.src = "file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/Pylipets.jpg"
-var image3 = new Image()
-image3.src = "file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/Manhattan.jpg"
-</script>
-
-<p><img src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/Brooklyn.jpg" width="500" height="300" name="slide" /></p>
-<script type="text/javascript">
-        var step=1;
-        function slideit()
-        {
-            document.images.slide.src = eval("image"+step+".src");
-            if(step<3)
-                step++;
-            else
-                step=1;
-            setTimeout("slideit()",2500);
-        }
-        slideit();
-</script>
-    		</div>
-        <!--
+            <p><img src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/Brooklyn.jpg" width="800" height="520" name="slide" /></p>
+            <script type="text/javascript">
+            var step=1;
+            function slideit()
+            {
+              document.images.slide.src = eval("image"+step+".src");
+              if(step<3)
+                  step++;
+              else
+                  step=1;
+              setTimeout("slideit()",2500);
+            }
+            slideit();
+            </script>
+    	  </div>
+      
     		<div id="People">
-          <script type="text/javascript">
-
-          var image3 = new Image()
-          image3.src = "file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/EvBessar1.jpg"
-          var image4 = new Image()
-          image4.src = "file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/EvBessar2.jpg"
-          var image5 = new Image()
-          image5.src = "file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/ClaudiaLi.jpg"
-          var image6 = new Image()
-          image6.src = "ile:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/EvBessar3.jpg"
-          </script>
-<p><img src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/Brooklyn.jpg" width="500" height="300" name="slide" /></p>
-<script type="text/javascript">
-        var step=1;
-        function slideit()
-        {
-            document.images.slide.src = eval("image"+step+".src");
-            if(step<4)
-                step++;
-            else
-                step=1;
-            setTimeout("slideit()",2500);
-        }
-        slideit();
-</script>
-    		
+          <h2> People </h2>
+            <img id="first" src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/EvBessar1.jpg" style="width:350px; height:440px; float:left; margin-left:190px; margin-bottom:30px;">
+            <img id="second" src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/EvBessar2.jpg" style="width: 350px; height: 440px; float:left; margin-bottom:30px;">
+            <img id="third" src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/EvBessar3.jpg" style="width: 350px; height: 440px; float:left; margin-right:150px; margin-bottom:30px;">
         </div>
-    		<div id="Events">
+
+        <div id="Events">
+          <h2> Events </h2>
+            <img id="third" src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/Paris1.JPG" style="width: 500px; height: 350px; float:left; margin-left:220px; margin-bottom: 50px;">
+            <img id="third" src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/Holland.jpg" style="width: 500px; height: 350px; float:left; margin-right:100px; margin-bottom: 50px;">
+<!--
+        <div id="Events">
     			<h2> Events </h2>
-    			<img src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/Paris.jpg" alt="Paris" style="width:350px; height:240px;">
+    			<img src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/Paris1.JPG" alt="Paris" style="width:350px; height:240px;">
     			<img src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/Holland.jpg" alt="Holland" style="width:350px; height:240px;">
     			<img src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/Graduation.jpg" alt="Graduation" style="width:350px; height:240px;">
     			<img src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/Maydan.jpg" alt="Maydan" style="width:240px; height:270px;">
