Added Pieces Section

--- a/HomePage.html
+++ b/HomePage.html
@@ -10,9 +10,9 @@
 		<p> With each section I share a piece of my world </p>
 		<hr / style="50px;">
 				<ul class="nav" style="margin-top: 30px;margin-bottom: 30px; margin-right: auto; margin-left: auto;">
-					<li><a href="#stills" style="text-decoration: none;"> Stills </a></li>
-    				<li><a href="#chapters" style="text-decoration: none;"> Chapters </a></li>
-    				<li><a href="#pieces" style="text-decoration: none;"> Pieces </a></li>
+					<li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/Stills.html" style="text-decoration: none;"> Stills </a></li>
+    				<li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/Chapters.html" style="text-decoration: none;"> Chapters </a></li>
+    				<li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/Pieces.html" style="text-decoration: none;"> Pieces </a></li>
     				<li><a href="#reachme" style="text-decoration: none;"> Reach me </a></li>
   					</ul>
   				</ul>
