--- a/Stills.html
+++ b/Stills.html
@@ -8,12 +8,12 @@
 <body>
   <ul class="nav">
             <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/HomePage.html" style="text-decoration: none;"> Home </a></li>
-            <li><a href="#stills" style="text-decoration: none;"> Stills </a></li>
-            <li><a href="#chapters"style="text-decoration: none;"> Chapters </a></li>
-            <li><a href="#pieces" style="text-decoration: none;"> Pieces </a></li>
+            <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/Stills.html" style="text-decoration: none;"> Stills </a></li>
+            <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/Chapters.html"style="text-decoration: none;"> Chapters </a></li>
+            <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/Pieces.html" style="text-decoration: none;"> Pieces </a></li>
             <li><a href="#reachme" style="text-decoration: none;"> Reach me </a></li>
             </ul>
-          </ul>
+  </ul>
 
     <video autoplay loop muted poster="timelapse2.jpg" id="background">
     <source src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/timelapse2.mp4" type="video/mp4">
