Added Reach Me page

--- a/Pieces.html
+++ b/Pieces.html
@@ -11,7 +11,7 @@
         <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/Stills.html" style="text-decoration: none;"> Stills </a></li>
         <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/Chapters.html"style="text-decoration: none;"> Chapters </a></li>
         <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/Pieces.html" style="text-decoration: none;"> Pieces </a></li>
-        <li><a href="#reachme" style="text-decoration: none;"> Reach me </a></li>
+        <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/ReachMe.html" style="text-decoration: none;"> Reach me </a></li>
     </ul>
  
 		<video autoplay loop muted poster="timelapse3.jpg" id="background">
