--- a/HomePage.html
+++ b/HomePage.html
@@ -6,18 +6,18 @@
 </head>
 
 <body>
-		<img id="Logo" src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/LogoWhite.png" alt="LogoWhite" > 
+		<img id="Logo" src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/MidtermRevised/Img/LogoWhite.png" alt="LogoWhite" > 
 		<p> With each section I share a piece of my world </p>
 		<hr / style="50px;">
 				<ul class="nav" style="margin-top: 30px;margin-bottom: 30px; margin-right: auto; margin-left: auto;">
-					<li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/Stills.html" style="text-decoration: none;"> Stills </a></li>
-    				<li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/Chapters.html" style="text-decoration: none;"> Chapters </a></li>
-    				<li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/Pieces.html" style="text-decoration: none;"> Pieces </a></li>
-    				<li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/ReachMe.html" style="text-decoration: none;"> Reach me </a></li>
+					<li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/MidtermRevised/Stills.html" style="text-decoration: none;"> Stills </a></li>
+    				<li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/MidtermRevised/Chapters.html" style="text-decoration: none;"> Chapters </a></li>
+    				<li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/MidtermRevised/Pieces.html" style="text-decoration: none;"> Pieces </a></li>
+    				<li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/MidtermRevised/ReachMe.html" style="text-decoration: none;"> Reach me </a></li>
   					</ul>
   				</ul>
   		<video autoplay loop muted poster="stimelapse.jpg" id="background">
-		<source src="file:///Users/PolinaBucak/Downloads/timelapse.mp4" type="video/mp4">
+		<source src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/MidtermRevised/Img/timelapse.mp4">
 		</video>
 	<footer>
 		&copy 2016 Polina Buchak
