--- a/Pieces.html
+++ b/Pieces.html
@@ -7,43 +7,43 @@
 
 <body>
 	<ul class="nav">
-        <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/HomePage.html" style="text-decoration: none;"> Home </a></li>
-        <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/Stills.html" style="text-decoration: none;"> Stills </a></li>
-        <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/Chapters.html"style="text-decoration: none;"> Chapters </a></li>
-        <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/Pieces.html" style="text-decoration: none;"> Pieces </a></li>
-        <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/ReachMe.html" style="text-decoration: none;"> Reach me </a></li>
+        <li><a href="index.html" style="text-decoration: none;"> Home </a></li>
+        <li><a href="Stills.html" style="text-decoration: none;"> Stills </a></li>
+        <li><a href="Chapters.html"style="text-decoration: none;"> Chapters </a></li>
+        <li><a href="Pieces.html" style="text-decoration: none;"> Pieces </a></li>
+        <li><a href="ReachMe.html" style="text-decoration: none;"> Reach me </a></li>
     </ul>
  
-		<video autoplay loop muted poster="timelapse3.jpg" id="background">
-    	<source src="file:///Users/PolinaBucak/Downloads/IMG_2253.mp4">
+		<video autoplay loop muted poster="timelapse4.jpg" id="background">
+    	<source src="Imagesfortheweb/timelapse4.mp4">
     	</video>
 
     <h1>Pieces</h1>
     <p>Somethings that I have published...</p>
     	<div class="img">
   		<a target="_blank" href="https://theodivo.com/news/58_-elenakara-your-next-fashion-accessory.html">
-    	<img src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/elenaKara.jpg" alt="ElenaKara" width="300" height="200">
+    	<img src="Imagesfortheweb/elenaKara.jpg" alt="ElenaKara" width="300" height="200">
   		</a>
   		<div class="desc">ElenaKara: Your Next Fashion Accessory</div>
 		</div>
 		
 		<div class="img">
   		<a target="_blank" href="https://theodivo.com/news/59_the-firebird-of-new-york-fashion-week.html">
-    	<img src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/evbessar.jpg" alt="ElenaKara" width="300" height="200">
+    	<img src="Imagesfortheweb/evbessar.jpg" alt="EvBessar" width="300" height="200">
   		</a>
   		<div class="desc">The "Firebird" of New York Fashion Week</div>
 		</div>
 
 		<div class="img">
   		<a target="_blank" href="https://theodivo.com/news/62_backstage-of-guest-from-the-future.html">
-    	<img src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/AnnaK.jpg" alt="ElenaKara" width="500" height="300">
+    	<img src="Imagesfortheweb/AnnaK.jpg" alt="AnnaK" width="500" height="300">
   		</a>
   		<div class="desc">Backstage of Guest From the Future</div>
 		</div>
 
 		<div class="img">
   		<a target="_blank" href="https://theodivo.com/news/63_if-there-is-a-tale-of-struggle-or-wisdom-and.html">
-    	<img src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/AnnaMaria.jpg" alt="ElenaKara" width="500" height="300">
+    	<img src="Imagesfortheweb/AnnaMaria.jpg" alt="Precious7" width="500" height="300">
   		</a>
   		<div class="desc">Anna Maria Sandegren: Behind the Scenes of Precious 7 Magazine</div>
 		</div>
