--- a/ReachMe.html
+++ b/ReachMe.html
@@ -6,16 +6,16 @@
 </head>
 
 <body>
-	<video autoplay loop muted poster="stimelapse.jpg" id="background">
-	<source src="file:///Users/PolinaBucak/Downloads/IMG_2779.mp4">
+	<video autoplay loop muted poster="timelapse5.jpg" id="background">
+	<source src="Imagesfortheweb/timelapse5.mp4">
 	</video>
 
 	<ul class="nav">
-        <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/HomePage.html" style="text-decoration: none;"> Home </a></li>
-        <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/Stills.html" style="text-decoration: none;"> Stills </a></li>
-        <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/Chapters.html"style="text-decoration: none;"> Chapters </a></li>
-        <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/Pieces.html" style="text-decoration: none;"> Pieces </a></li>
-        <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/ReachMe.html" style="text-decoration: none;"> Reach me </a></li>
+        <li><a href="index.html" style="text-decoration: none;"> Home </a></li>
+        <li><a href="Stills.html" style="text-decoration: none;"> Stills </a></li>
+        <li><a href="Chapters.html"style="text-decoration: none;"> Chapters </a></li>
+        <li><a href="Pieces.html" style="text-decoration: none;"> Pieces </a></li>
+        <li><a href="ReachMe.html" style="text-decoration: none;"> Reach me </a></li>
     </ul>
 
 	<section id="reachme" 
