--- a/Stills.html
+++ b/Stills.html
@@ -7,16 +7,16 @@
 
 <body>
   <ul class="nav">
-            <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/HomePage.html" style="text-decoration: none;"> Home </a></li>
-            <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/Stills.html" style="text-decoration: none;"> Stills </a></li>
-            <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/Chapters.html"style="text-decoration: none;"> Chapters </a></li>
-            <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/Pieces.html" style="text-decoration: none;"> Pieces </a></li>
-            <li><a href="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/Midterm/ReachMe.html" style="text-decoration: none;"> Reach me </a></li>
+            <li><a href="index.html" style="text-decoration: none;"> Home </a></li>
+            <li><a href="Stills.html" style="text-decoration: none;"> Stills </a></li>
+            <li><a href="Chapters.html"style="text-decoration: none;"> Chapters </a></li>
+            <li><a href="Pieces.html" style="text-decoration: none;"> Pieces </a></li>
+            <li><a href="ReachMe.html" style="text-decoration: none;"> Reach me </a></li>
             </ul>
   </ul>
 
     <video autoplay loop muted poster="timelapse2.jpg" id="background">
-    <source src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/timelapse2.mp4" type="video/mp4">
+    <source src="Imagesfortheweb/timelapse2.mp4" type="video/mp4">
     </video>
 
   <h1> Stills </h1>
@@ -24,21 +24,21 @@
     		<div id="Stills">
       			<script type="text/javascript">
             var image1 = new Image()
-            image1.src = "file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/Brooklyn.jpg"
+            image1.src = "Imagesfortheweb/Brooklyn.jpg"
             var image2 = new Image()
-            image2.src = "file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/Pylipets.jpg"
+            image2.src = "Imagesfortheweb/Pylipets.jpg"
             var image3 = new Image()
-            image3.src = "file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/Manhattan.jpg"
+            image3.src = "Imagesfortheweb/Manhattan.jpg"
             var image4 = new Image()
-            image4.src = "file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/Paris1.JPG"
+            image4.src = "Imagesfortheweb/Paris1.JPG"
             var image5 = new Image()
-            image5.src = "file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/Holland.jpg"
+            image5.src = "Imagesfortheweb/Holland.jpg"
             </script>
 
-            <p><img src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/Brooklyn.jpg" width="800" height="520" name="slide" /></p>
-            <p><img src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/EvBessar1.jpg" width="520" height="800" name="slide" /></p>
-            <p><img src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/EvBessar3.jpg" width="520" height="800" name="slide" /></p>
-            <p><img src="file:///Users/PolinaBucak/Desktop/Intro%20to%20Web/img/EvBessar2.jpg" width="520" height="800" name="slide" /></p>
+            <p><img src="Imagesfortheweb/Brooklyn.jpg" width="800" height="520" name="slide" /></p>
+            <p><img src="Imagesfortheweb/EvBessar1.jpg" width="520" height="800" name="slide" /></p>
+            <p><img src="Imagesfortheweb/EvBessar3.jpg" width="520" height="800" name="slide" /></p>
+            <p><img src="imagesfortheweb/EvBessar2.jpg" width="520" height="800" name="slide" /></p>
             <script type="text/javascript">
             var step=1;
             function slideit()
